fix(syntax-highlighting): break words to overflow long line

--- a/_assets/stylesheets/_syntax-highlighting.scss
+++ b/_assets/stylesheets/_syntax-highlighting.scss
@@ -1,6 +1,10 @@
 /**
  * Syntax highlighting styles
  */
+pre.highlight {
+  overflow-wrap: break-word;
+}
+
 code {
     background: #fff;
     // @extend %vertical-rhythm;
